# CC_GeminiEnterprise_MissionControl

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  MODIFICATIONS_LOG.md  README.md  TEAM_WALKTHROUGH.md  check_ops.py  cloudbuild.yaml  comprehensive_diff.patch  create_ds.py  deploy.sh  list_docs_v2.py  main.py  mock_data.json  prepare_bq_data.py  pyproject.toml  search_docs_v2.py  setup.ipynb  sync_schema.txt
bq_load/: commitments.jsonl  initiatives.jsonl  launches.jsonl  person.jsonl  user.jsonl
docs/: Architecture-Philosophy.md  Best-Practices.md  Enabling-Continuous-Deployment.md  First-Time-Deployment-Guide.md  Glossary.md  How-to-Build-New-Pipelines.md  README.md
pipelines/: live_github_discussions_pipeline.yaml.disabled  live_github_docs_pipeline.yaml.disabled  live_github_docs_unified_pipeline.yaml.disabled  live_snooguts_mission_control.yaml.disabled  test_snooguts_mock.yaml
src/bigquery/: __init__.py  fetchers.py  transformers.py
src/core/: __init__.py  base.py  gcp_uploaders.py  loader.py  models.py  pipeline.py
src/github/: __init__.py  cache.py  client.py
src/github/fetchers/: __init__.py  base.py  commit.py  discussion.py  file.py  issue.py  pull_request.py
src/github/identity/: __init__.py
src/mock/: __init__.py  mock_fetchers.py  mock_transformers.py  mock_uploaders.py
terraform/jobs/: main.tf  variables.tf
tests/: test_cache.py  test_connector.py  test_github_fetcher.py  test_github_transformers.py  test_identity.py  test_main_gcs_cache.py
tests/test_data/: doc_rest_pipeline.yaml  test_unified_acl.yaml
(+19 files in other folders)
