[project]
name = "gep-cc-piper"
version = "1.0.0"
description = "Gemini Custom Connector Ingestion Simulator & Live Sync Engine (Pure-ACL POC)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "google-auth>=2.15.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-discoveryengine>=0.11.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-bigquery>=3.10.0",
    "pyyaml>=6.0",
    "pyopenssl",
    "requests>=2.28.0",
    "pyjwt>=2.4.0",
    "tenacity>=8.1.0",
    "inquirer>=3.0.0",
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

